# rules_packer

./: .bazelrc  BUILD.bazel  LICENSE.txt  README.md  WORKSPACE.bazel
packer/: BUILD.bazel  build-runner.sh.tpl  init-runner.sh.tpl  packer.bazel  rules.bzl  workspace.bzl
tools/bazel/: deleted.bazelrc
tools/file/: files.bazel  workspace.bzl
tools/lint/: BUILD.bazel
tools/npm/: BUILD.bazel  npm.bzl  workspace.bzl
tools/prettier/: BUILD.bazel
