load("@rules_file//generate:rules.bzl", "format", "formatter_composite", "generate_test", "multi_generate")

package(default_visibility = ["//visibility:public"])

format(
    name = "buildifier_format",
    srcs = ["@files//:buildifier_files"],
    formatter = "//tools/buildifier",
    strip_prefix = "/files",
)

multi_generate(
    name = "format",
    deps = [
        ":buildifier_format",
        ":prettier_format",
    ],
)

generate_test(
    name = "format_test",
    generate = ":format",
)

format(
    name = "prettier_format",
    srcs = ["@files//:prettier_files"],
    formatter = "//tools/prettier",
    strip_prefix = "/files",
)
